# vidispine-adapter

./: .mypy.ini  .readthedocs.yml  CONTRIBUTING.md  Makefile  README.md  pyproject.toml  tox.ini
.circleci/: config.yaml  config.yml
docs/source/: client.rst  conf.py  contributing.md  index.rst  jobs.rst  metadata.rst
tests/: conftest.py  dummy_placeholder_metadata.json  test_base.py  test_client.py  test_create_metadata_field.py  test_create_placeholder.py  test_import_to_placeholder_item.py  test_reindex.py  test_update_metadata_field.py  test_vidispine.py
tests/cassettes/: create_collection.yaml  create_placeholder.yaml  get_item.yaml  get_item_with_metadata.yaml  get_item_without_metadata.yaml  import_to_placeholder_item.yaml  import_to_placeholder_item_invalid_input.yaml  import_to_placeholder_item_not_found.yaml  not_found_with_invalid_id.yaml  version.yaml
tests/test_collections/: test_create.py  test_create_placeholder.py  test_delete.py  test_delete_multiple.py  test_get.py  test_list.py  test_list_collections.py  test_reindex.py  test_update.py  test_update_metadata.py
tests/test_items/: test_create_placeholder.py  test_delete.py  test_get.py  test_import_to_placeholder_item.py  test_transcode.py
tests/test_jobs/: test_get.py  test_list_problems.py  test_problem.py
tests/test_log/: test_list.py
tests/test_metadata/: test_get.py  test_list.py  test_update.py
vidispine/: __init__.py  base.py  client.py  collections.py  errors.py  item.py  items.py  jobs.py  log.py  metadata.py  search.py  shape_tag.py  storage.py  utils.py
(+254 files in other folders)
